syntax = "proto3";
package Protocol;

import "Enum.proto";

option csharp_namespace = "Google.Protobuf.Protocol";

message RoomInfo
{
	int32 roomId = 1;
	string roomTitle = 2;
}

message PlayerInfo
{
	string playerName = 1;
	int32 hp = 2;
	int32 exp = 3;
	int32 attack = 4;
	int32 mapId = 5;
	int32 level = 6;
}

message PlayerState
{
	float posX = 1;
	float posY = 2;
	MoveDir moveDir = 3;
	BaseState baseState = 4;
}

message Player
{
	int32 playerId = 1;
	PlayerInfo playerInfo = 2;
	PlayerState playerState = 3;
}